config/slate-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: slate-controller
  labels:
    app: slate-controller
    service: slate-controller
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: slate-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slate-controller
      version: v1
  template:
    metadata:
      labels:
        app: slate-controller
        version: v1
    spec:
      serviceAccountName: slate-controller-sa
      containers:
      - image: ghcr.io/adiprerepa/slate-controller:latest # todo change
        imagePullPolicy: IfNotPresent
        name: slate-controller
        ports:
        - containerPort: 8080
