config/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: slate-filter
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: slate-filter-config
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              vm_config:
                code:
                  remote:
                    http_uri:
                      uri: https://github.com/adiprerepa/self-optimizing-istio/blob/master/wasm-out/slate_plugin.wasm 
                runtime: envoy.wasm.runtime.v8

---
# apiVersion: networking.istio.io/v1alpha3
# kind: EnvoyFilter
# metadata:
#   name: slate-filter-config
# spec:
#   configPatches:
#   - applyTo: EXTENSION_CONFIG
#     match:
#       context: SIDECAR_INBOUND
#     patch:
#       operation: ADD
#       value:
#         name: example-filter-config
#         typed_config:
#           '@type': type.googleapis.com/udpa.type.v1.TypedStruct
#           type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
#           value:
#             config:
#               vm_config:
#                 code:
#                   remote:
#                     http_uri:
#                       uri: https://github.com/adiprerepa/self-optimizing-istio/blob/master/wasm-out/slate_plugin.wasm 
#                 runtime: envoy.wasm.runtime.v8
